Clear Website Texte

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				                <!-- <li class="mb-3"><a href="http://www.instagram.com/jvidaln"><span class="fa-container text-center mr-2"><i class="fab fa-instagram-f fa-fw"></i></span>instagram.com/jvidaln</a></li>
 				                <li class="mb-3"><a href="http://twitter.com/JVidalN"><span class="fa-container text-center mr-2"><i class="fab fa-twitter fa-fw"></i></span>twitter.com/JVidalN</a></li>
 				                <li class="mb-3"><a href="http://www.facebook.com/JVidalNunes"><span class="fa-container text-center mr-2"><i class="fab fa-facebook-f fa-fw"></i></span>facebook.com/JVidalNunes/</a></li> -->
-				                <li><a href="http://jvidaln.github.io"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>http://jvidaln.github.io</a></li>
+				                <li><a href="http://jvidaln.github.io"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>jvidaln.github.io</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 
