--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Jean Vidal Nunes</h1>
 						    <div class="title mb-3">Junior Systems Analyst</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>j.vidalnunes@gmail.com</a></li>
-							    <li><a href="#"><i class="fas fa-mobile-alt fa-fw mr-2" data-fa-transform="grow-6"></i>+55 71 99161-8931</a></li>
+							    <li class="mb-2"><a href="mailto:j.vidalnunes@gmail.com"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>j.vidalnunes@gmail.com</a></li>
 						    </ul>
 					    </div><!--//primary-info-->
 					    <div class="secondary-info ml-md-auto mt-2">
 						    <ul class="resume-social list-unstyled">
 				                <li class="mb-3"><a href="http://www.linkedin.com/in/jvidalnunes"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/jvidalnunes</a></li>
 				                <li class="mb-3"><a href="http://github.com/JVidalN"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span>github.com/JVidalN</a></li>
-				                <!-- <li class="mb-3"><a href="http://www.instagram.com/jvidaln"><span class="fa-container text-center mr-2"><i class="fab fa-instagram-f fa-fw"></i></span>instagram.com/jvidaln</a></li>
-				                <li class="mb-3"><a href="http://twitter.com/JVidalN"><span class="fa-container text-center mr-2"><i class="fab fa-twitter fa-fw"></i></span>twitter.com/JVidalN</a></li>
-				                <li class="mb-3"><a href="http://www.facebook.com/JVidalNunes"><span class="fa-container text-center mr-2"><i class="fab fa-facebook-f fa-fw"></i></span>facebook.com/JVidalNunes/</a></li> -->
 				                <li><a href="http://jvidaln.github.io"><span class="fa-container text-center mr-2"><i class="fas fa-globe"></i></span>jvidaln.github.io</a></li>
+				                <li class="mb-3"><a href="http://twitter.com/JVidalN"><span class="fa-container text-center mr-2"><i class="fab fa-twitter fa-fw"></i></span>twitter.com/JVidalN</a></li>
+				                <!-- <li class="mb-3"><a href="http://www.instagram.com/jvidaln"><span class="fa-container text-center mr-2"><i class="fab fa-instagram-f fa-fw"></i></span>instagram.com/jvidaln</a></li>
+				                <li class="mb-3"><a href="http://www.facebook.com/JVidalNunes"><span class="fa-container text-center mr-2"><i class="fab fa-facebook-f fa-fw"></i></span>facebook.com/JVidalNunes/</a></li> -->
 						    </ul>
 					    </div><!--//secondary-info-->
 
