Get Repositories By GitHub and Populate in Portifolio Section

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
     <!-- Theme CSS -->
     <link id="theme-style" rel="stylesheet" href="assets/css/pillar-1.css" />
-
-    <script src="./assets/js/main.js"></script>
   </head>
 
   <body>
@@ -902,11 +900,11 @@
             <div class="col-lg-9">
               <section class="resume-section summary-section mb-5">
                 <h2
-                  class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3"
+                  class="portifolio-section-title text-uppercase font-weight-bold pb-3 mb-3"
                 >
                   Portifolio
                 </h2>
-                <div class="resume-section-content"></div>
+                <div class="portifolio-section-content"></div>
               </section>
             </div>
           </div>
@@ -926,5 +924,6 @@
         for developers
       </small>
     </footer>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
