Fix name of portfolio and include the demo gif of automatic portfolio update

--- a/index.html
+++ b/index.html
@@ -914,11 +914,11 @@
             <div class="col-lg-9">
               <section class="resume-section summary-section mb-5">
                 <h2
-                  class="portifolio-section-title text-uppercase font-weight-bold pb-3 mb-3"
+                  class="portfolio-section-title text-uppercase font-weight-bold pb-3 mb-3"
                 >
-                  Portifolio
+                  Portfolio
                 </h2>
-                <div class="portifolio-section-content"></div>
+                <div class="portfolio-section-content"></div>
               </section>
             </div>
           </div>
