--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="" />
             <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
               <div class="primary-info">
-                <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">
+                <!-- <h1 class="name mt-0 mb-1 text-white text-uppercase">
                   Jean Vidal Nunes
                 </h1>
                 <div class="title mb-3">Junior Systems Analyst</div>
@@ -55,7 +55,7 @@
                       >j.vidalnunes@gmail.com</a
                     >
                   </li>
-                </ul>
+                </ul> -->
               </div>
               <!--//primary-info-->
               <div class="secondary-info ml-md-auto mt-2">
