--- a/index.html
+++ b/index.html
@@ -43,20 +43,7 @@
           <div class="media flex-column flex-md-row">
             <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="" />
             <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
-              <div class="primary-info">
-                <!-- <h1 class="name mt-0 mb-1 text-white text-uppercase">
-                  Jean Vidal Nunes
-                </h1>
-                <div class="title mb-3">Junior Systems Analyst</div>
-                <ul class="list-unstyled">
-                  <li class="mb-2">
-                    <a href="mailto:j.vidalnunes@gmail.com"
-                      ><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i
-                      >j.vidalnunes@gmail.com</a
-                    >
-                  </li>
-                </ul> -->
-              </div>
+              <div class="primary-info"></div>
               <!--//primary-info-->
               <div class="secondary-info ml-md-auto mt-2">
                 <ul class="resume-social list-unstyled">
