--- a/index.html
+++ b/index.html
@@ -45,40 +45,7 @@
             <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
               <div class="primary-info"></div>
               <!--//primary-info-->
-              <div class="secondary-info ml-md-auto mt-2">
-                <ul class="resume-social list-unstyled">
-                  <li class="mb-3">
-                    <a href="http://www.linkedin.com/in/jvidalnunes"
-                      ><span class="fa-container text-center mr-2"
-                        ><i class="fab fa-linkedin-in fa-fw"></i></span
-                      >linkedin.com/in/jvidalnunes</a
-                    >
-                  </li>
-                  <li class="mb-3">
-                    <a href="http://github.com/JVidalN"
-                      ><span class="fa-container text-center mr-2"
-                        ><i class="fab fa-github-alt fa-fw"></i></span
-                      >github.com/JVidalN</a
-                    >
-                  </li>
-                  <li class="mb-3">
-                    <a href="http://jvidaln.github.io">
-                      <span class="fa-container text-center mr-2">
-                        <i class="fas fa-globe"></i>
-                      </span>
-                      jvidaln.github.io
-                    </a>
-                  </li>
-                  <li>
-                    <a href="http://twitter.com/JVidalN"
-                      ><span class="fa-container text-center mr-2"
-                        ><i class="fab fa-twitter fa-fw"></i></span
-                      >twitter.com/JVidalN</a
-                    >
-                  </li>
-                  <!-- <li class="mb-3"><a href="http://www.instagram.com/jvidaln"><span class="fa-container text-center mr-2"><i class="fab fa-instagram-f fa-fw"></i></span>instagram.com/jvidaln</a></li> <li class="mb-3"><a href="http://www.facebook.com/JVidalNunes"><span class="fa-container text-center mr-2"><i class="fab fa-facebook-f fa-fw"></i></span>facebook.com/JVidalNunes/</a></li> -->
-                </ul>
-              </div>
+              <div class="secondary-info ml-md-auto mt-2"></div>
               <!--//secondary-info-->
             </div>
             <!--//media-body-->
