--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">
                   Work Experience
                 </h2>
-                <div class="resume-section-content">
+                <div class="resume-section-content experience-section">
                   <div class="resume-timeline position-relative">
                     <!--//resume-timeline-item-->
                   </div>
@@ -79,8 +79,8 @@
                 <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">
                   Skills &amp; Tools
                 </h2>
-                <div class="resume-section-content">
-                  <div class="resume-skill-item">
+                <div class="resume-section-content skill-section">
+                  <!-- <div class="resume-skill-item">
                     <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
                     <ul class="list-unstyled mb-4">
                       <li class="mb-2">
@@ -149,9 +149,9 @@
                         </div>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                   <!--//resume-skill-item-->
-                  <div class="resume-skill-item">
+                  <!-- <div class="resume-skill-item">
                     <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
                     <ul class="list-unstyled">
                       <li class="mb-2">
@@ -259,9 +259,9 @@
                         </div>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                   <!--//resume-skill-item-->
-                  <div class="resume-skill-item">
+                  <!-- <div class="resume-skill-item">
                     <h4 class="resume-skills-cat font-weight-bold">Others</h4>
                     <ul class="list-inline">
                       <li class="list-inline-item">
@@ -300,7 +300,7 @@
                       </li>
                       <li class="list-inline-item"><span class="badge badge-light">EAP</span></li>
                     </ul>
-                  </div>
+                  </div> -->
                   <!--//resume-skill-item-->
                 </div>
                 <!--resume-section-content-->
