--- a/index.html
+++ b/index.html
@@ -80,227 +80,6 @@
                   Skills &amp; Tools
                 </h2>
                 <div class="resume-section-content skill-section">
-                  <!-- <div class="resume-skill-item">
-                    <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-                    <ul class="list-unstyled mb-4">
-                      <li class="mb-2">
-                        <div class="resume-skill-name">Angular.js</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 80%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">React.js</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 30%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">JavaScript</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 75%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">JQuery</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 65%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">HTML/CSS</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 80%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div> -->
-                  <!--//resume-skill-item-->
-                  <!-- <div class="resume-skill-item">
-                    <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
-                    <ul class="list-unstyled">
-                      <li class="mb-2">
-                        <div class="resume-skill-name">C#</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 90%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">Python</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 30%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">Node.js</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 70%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">Express</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 50%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">MongoDB</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 55%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">Oracle Database</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 80%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">SQL Server</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 70%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                      <li class="mb-2">
-                        <div class="resume-skill-name">MySQL</div>
-                        <div class="progress resume-progress">
-                          <div
-                            class="progress-bar theme-progress-bar-dark"
-                            role="progressbar"
-                            style="width: 60%;"
-                            aria-valuenow="25"
-                            aria-valuemin="0"
-                            aria-valuemax="100"
-                          ></div>
-                        </div>
-                      </li>
-                    </ul>
-                  </div> -->
-                  <!--//resume-skill-item-->
-                  <!-- <div class="resume-skill-item">
-                    <h4 class="resume-skills-cat font-weight-bold">Others</h4>
-                    <ul class="list-inline">
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Code Review</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Git and GitHub</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Tortoise SVN</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Unit Testing</span>
-                      </li>
-                      <li class="list-inline-item"><span class="badge badge-light">TDD</span></li>
-                      <li class="list-inline-item"><span class="badge badge-light">MVC</span></li>
-                      <li class="list-inline-item"><span class="badge badge-light">UML</span></li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Asp.Net</span>
-                      </li>
-                      <li class="list-inline-item"><span class="badge badge-light">Java</span></li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">WordPress</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Design Patterns</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Project Management</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Business Process Modeling</span>
-                      </li>
-                      <li class="list-inline-item">
-                        <span class="badge badge-light">Requirements Management</span>
-                      </li>
-                      <li class="list-inline-item"><span class="badge badge-light">EAP</span></li>
-                    </ul>
-                  </div> -->
                   <!--//resume-skill-item-->
                 </div>
                 <!--resume-section-content-->
@@ -310,36 +89,13 @@
                 <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">
                   Education
                 </h2>
-                <div class="resume-section-content">
-                  <ul class="list-unstyled">
-                    <li class="mb-2">
-                      <div class="resume-degree font-weight-bold">BSc in Information Systems</div>
-                      <div class="resume-degree-org">Universidade do Estado da Bahia - UNEB</div>
-                      <div class="resume-degree-time">2010 - 2018</div>
-                    </li>
-                  </ul>
-                </div>
+                <div class="resume-section-content education-section"></div>
               </section>
               <section class="resume-section language-section mb-5">
                 <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">
                   Language
                 </h2>
-                <div class="resume-section-content">
-                  <ul class="list-unstyled resume-lang-list">
-                    <li class="mb-2">
-                      <span class="resume-lang-name font-weight-bold">Português</span>
-                      <small class="text-muted font-weight-normal">(Native)</small>
-                    </li>
-                    <li class="mb-2">
-                      <span class="resume-lang-name font-weight-bold">English</span>
-                      <small class="text-muted font-weight-normal">(Intermediate)</small>
-                    </li>
-                    <li>
-                      <span class="resume-lang-name font-weight-bold">Spanish</span>
-                      <small class="text-muted font-weight-normal">(Beginner)</small>
-                    </li>
-                  </ul>
-                </div>
+                <div class="resume-section-content language-section"></div>
               </section>
             </div>
           </div>
