Include title info and refactory portfolio's method

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       gtag("js", new Date());
       gtag("config", "G-MD8XZDMVHN");
     </script>
-    <title>Jean Vidal Nunes | Junior Systems Analyst</title>
+    <title></title>
     <!-- Meta -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
