Delete files data.json and data.js, include file data.mjs and using dynamic imports of ES2020

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <!--//resume-body-->
       </div>
     </article>
-    <script src="./assets/js/data.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <!-- <script src="./assets/js/data.js"></script> -->
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
