--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-      gtag("config", "G-MD8XZDMVHN");
+      gtag('js', new Date());
+      gtag('config', 'G-MD8XZDMVHN');
     </script>
     <title></title>
     <!-- Meta -->
@@ -19,7 +19,7 @@
     <meta name="description" content="Responsive Resume Template" />
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media" />
     <link rel="shortcut icon" href="favicon.ico" />
-    <link rel="canonical" href="http://jvidaln.github.io/" />
+    <link rel="canonical" href="https://jvidaln.github.io/dynamic-portfolio-resume-cv" />
     <!-- Google Font -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900"
